nav bar fixed to top of screen, and logos removed when viewing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
     padding: 0;
     font-size: 15px;
     display: inline-block;
+    margin: 0;
 }
 
 .navbar-brand:hover {
